--- a/index.html
+++ b/index.html
@@ -1,177 +1,12 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-    <style type="text/css">
-
-body{
-  margin: 1px;
-  border: 2px solid black;
-  background-color: pink;
-}
-
-/* The site navigation top menu */
-.sidebar {
-  margin: 0;
-  padding: 0;
-  background-color: #f1f1f1;
-  overflow: auto;
-  width: 100%;
-  height: auto;
-  position: relative;
-}
-
-/* Sidebar links to the right*/
-.sidebar a.menu {
-  display: block;
-  color: black;
-  padding: 16px;
-  text-decoration: none; /* removes link line below word*/
-}
-
-/* Home link to the left*/
-.sidebar a.home {
-  display: block;
-  padding: 16px;
-  background-color: #04AA6D;
-  color: white;
-  float: left;
-  text-decoration: none;
-}
-
-/* Links on mouse-over */
-.sidebar a.menu:hover {
-  background-color: #555;
-  color: white;
-}
-
-/* Page content */
-div.content {
-  margin-left: 40px;
-  padding: 1px 16px;
-  height: 500px;
-}
-
-.sidebar a.menu {float: right;}
-
-/* drop down menu*/
-.sidebar-drop {
-  display: none;
-}
-.sidebar-drop div.ham-menu {
-    display: none;
-  }
-.sidebar-drop div.drop-menu {
-    display: none;
-  }
-  a.menu-drop {
-    display: none;
-  }
-
-
-/* On screens that are less than 720px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 720px) {
-.sidebar a.menu {
-    display: none;
-  }
-
-.sidebar div.ham-menu {
-    display: block;
-    padding: 5px 20px;
-    float: right;    
-    cursor: pointer;
-  }
-
-   ham-div {
-  display: block;
-  text-decoration: none;
-  width: 35px;
-  height: 5px;
-  background-color: black;
-  margin: 6px 0;
-  }
-
-  .sidebar-drop{
-    display:inline-grid;
-    float: right;
-    margin: 0;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    overflow: auto;
-  }
-
-  .sidebar-drop div.drop-menu {
-    display: inline-grid;
-    position: relative;
-    float: right;
-   }
-  
-  a.menu-drop {
-    display: block;
-    position: relative;
-    padding: 16px;
-    background-color: #aa048e;
-    color: white;
-    float: right;
-    text-decoration: none;
-    }
-
-    a.menu-drop:hover {
-     background-color: #555;
-     color: white;
-     }
-
-}
-</style>
-</head>
-
-
-
+<html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+    </head>
     <body>
-        <!-- The sidebar -->
-        <div class="sidebar">
-            <a class="home" href="#home"> Home </a>
-            <a class="menu" href="#news"> News </a>
-            <a class="menu" href="#contact"> Contact </a>
-            <a class="menu" href="#about"> About </a>
-            <div onclick="myFunction()" style = "float:right">            
-              <div class="ham-menu" style = "float:right">
-              <ham-div>  </ham-div>
-              <ham-div>  </ham-div>
-              <ham-div>  </ham-div>  
-              </div>
-            </div>
-        </div>
-
-        <div style ="display: none" class="sidebar-drop" id="myDIV">
-          <div class="drop-menu">
-            <a class="menu-drop" href="#news"> News </a>
-          </div>
-          <div class="drop-menu">
-            <a class="menu-drop" href="#contact"> Contact </a>
-          </div>
-          <div class="drop-menu">
-            <a class="menu-drop" href="#about"> About </a>
-          </div>
-        </div>
-        
-        <!-- Page content -->
-        <div class="content">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
-
+      Hello
     </body>
-
-    <script>
-      function myFunction() {
-        var x = document.getElementById("myDIV");
-        if (x.style.display === "none") {
-         x.style.display = "inline-grid" ;
-        } else {
-        x.style.display = "none";
-        }
-      }
-    </script>
-
 </html>
