index edits name surname

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
       <title>Document</title>
     </head>
     <body>
-      Hello
+      Hello my name is Giacomo. My surname starts with B.
     </body>
 </html>
