--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <a href="#" class="btn beige">Light Theme</a>
-      <a href="#" class="btn dark">Scary Theme</a>
+      <a href="#" class="btn dark">Dark Theme</a>
       <a href="#" class="btn switch">Swap</a>
     </div>
   </body>
